--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <plugins>
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
+            <version>1.6.0</version>
             <artifactId>exec-maven-plugin</artifactId>
             <configuration>
                 <mainClass>com.robinweston.MakeHttpRequests</mainClass>
