Added UniRest example

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
   <groupId>com.robinweston</groupId>
   <artifactId>http-requests</artifactId>
   <version>1</version>
+  <dependencies>
+    <dependency>
+    <groupId>com.mashape.unirest</groupId>
+    <artifactId>unirest-java</artifactId>
+    <version>1.4.9</version>
+</dependency>
+  </dependencies>
   <build>
     <plugins>
         <plugin>
